change topic name

--- a/monitor-agent/src/main/resources/app.yaml
+++ b/monitor-agent/src/main/resources/app.yaml
@@ -1,7 +1,7 @@
 mqtt:
   brokerUrl: tcp://localhost:1883
   clientId: weather-agent
-  topic: /weather/current
+  topic: /weather02/system/
   username: weather_publisher
   password: change_me
 
